--- a/index.html
+++ b/index.html
@@ -136,20 +136,46 @@
 <!-- super client section -->
 <section class="my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 flex 
 flex-col lg:flex-row gap-12">
-<div class="space-y-5">
+<div class="flex items-center lg:pr-28">
+   <div class="space-y-5">
     <h3 class="text-5xl font-extrabold text-white">Meet Our Super 
-      <br>  Clients</h3>
-      <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-      <button class="btn btn-primary">Show All</button>
-
+        <br>  Clients</h3>
+        <p class="text-white ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <button class="btn btn-primary">Show All</button>
+  
+   </div>
 </div>
-<div>
-    <!-- review -->
-    <div class="relative p-10 rounded-lg bg-white ">
-        <img class="absolute -top-5 -left-5"  src="images/client.png" alt="">
+<!-- review container -->
+<div class="relative">
+    <!--next  review -->
+    <div class="relative p-10 rounded-lg z-10 bg-white opacity-40 mb-16">
+        <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"  src="images/client.png" alt="">
         <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
         <h4 class="font-bold mt-5">Ilham Yuda</h4>
         <p class="font-medium">Businessman</p>
+       <div class="flex justify-end">
+        <img src="images/circles.png" alt="">
+       </div>
+    </div>
+    <!--current review -->
+    <div class="absolute p-10 rounded-lg z-20 bg-white top-40 lg:-left-32 lg:w-[430px]">
+        <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"  src="images/client.png" alt="">
+        <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold mt-5">Ilham Yuda</h4>
+        <p class="font-medium">Businessman</p>
+       <div class="flex justify-end">
+        <img src="images/circles.png" alt="">
+       </div>
+    </div>
+    <!--previous review -->
+    <div class="relative p-10 rounded-lg z-10 bg-white opacity-40">
+        <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"  src="images/client.png" alt="">
+        <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+        <h4 class="font-bold mt-5">Ilham Yuda</h4>
+        <p class="font-medium">Businessman</p>
+       <div class="flex justify-end">
+        <img src="images/circles.png" alt="">
+       </div>
     </div>
 </div>
 </section>
